<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.
    Copyright (C) 2011 htbest2000@gmail.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">Android V2EX</string>
    <string name="fetch_topic_list_error">Download topics failed, please try again</string>
    <string name="no_available_connection">Please connect to Internet before sync</string>
    <string name="description_logo">V2EX</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_search">Search</string>

    <string name="replies">replies</string>
    <string name="in">in</string>
    <string name="post_at">at</string>
    
    <string name="settings">Settings</string>
    
    <string-array name="auto_update_interval_entries">
      <item>manually</item>
      <item>every 10 minute</item>
      <item>every 30 minute</item>
      <item>every 1 hours</item>
      <item>every 2 hours</item>
    </string-array>
    
    <string name="auto_update_interval_values_default">0</string>
    <string-array name="auto_update_interval_values">
      <item>0</item>
      <item>10</item>
      <item>30</item>
      <item>60</item>
      <item>120</item>
    </string-array>
    
    <string-array name="days_to_sync_entries">
      <item>1 day</item>
      <item>1 week</item>
      <item>1 month</item>
      <item>3 month</item>
    </string-array>
    
    <string name="days_to_sync_values_default">7</string>
    <string-array name="days_to_sync_values">
      <item>1</item>
      <item>7</item>
      <item>30</item>
      <item>90</item>
    </string-array>
    

    <!--
        SQL Statements
    -->
	<string-array name="sql_create_table_set" translatable="false">
		<item>CREATE TABLE topics (
			_id INTEGER PRIMARY KEY,
			topic_id INTEGER,
			title TEXT,
			url TEXT,
			content TEXT,
			content_rendered TEXT,
			replies INTEGER,
			member_id INTEGER,
			member_username TEXT,
			node_id INTEGER,
			node_name TEXT,
			node_title TEXT,
			node_title_alternative TEXT,
			node_url TEXT,
			node_topics INTEGER,
			created INTEGER,
			last_modified INTEGER,
			last_touched INTEGER
			);</item>

		<item>CREATE TABLE nodes (
			_id INTEGER PRIMARY KEY,
			node_id LONG,
			name TEXT,
			url TEXT,
			title TEXT,
			title_alternative TEXT,
			topics TEXT,
			header TEXT,
			footer TEXT,
			created TEXT
			);</item>
	</string-array>

	<!-- About AndroidV2EX -->
	<string name="about_info_title">About AndroidV2EX</string>
	<string name="about_info_summary">version: 0.11</string>
</resources>
