<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <ListPreference
        android:key="auto_update_interval"
        android:title="Auto Update Interval"
        android:entries="@array/auto_update_interval_entries"
        android:entryValues="@array/auto_update_interval_values"
        android:summary="Auto Update Interval summary"
        android:defaultValue="@string/auto_update_interval_values_default" />

    <ListPreference
        android:key="days_to_sync"
        android:title="Number of days to sync"
        android:entries="@array/days_to_sync_entries"
        android:entryValues="@array/days_to_sync_values"
        android:summary="Number of days to sync summary"
        android:defaultValue="@string/days_to_sync_values_default" />

</PreferenceScreen>
