<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.
    Copyright (C) 2011 htbest2000@gmail.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:orientation="vertical" android:layout_height="wrap_content">
    <LinearLayout style="@style/TitleBar">
        <ImageView style="@style/TitleBarLogo"
                   android:contentDescription="@string/description_logo"/>

        <View style="@style/TitleBarSpring" />
        <ImageView style="@style/TitleBarSeparator" />

        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="@string/description_refresh"
            android:src="@drawable/ic_title_browser"
            android:onClick="onBrowserClick" />

        <ImageView style="@style/TitleBarSeparator" />

        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_search"
            android:visibility="gone"
            android:onClick="onSearchClick" />
    </LinearLayout>

	<ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView1"
		        android:layout_height="fill_parent">
		<LinearLayout
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<TextView android:layout_height="wrap_content" android:text="TextView"
				android:id="@+id/topic_title" android:layout_width="fill_parent" android:layout_gravity="center_vertical" android:layout_weight="0" android:textSize="22sp" android:paddingLeft="8dp" android:paddingRight="8dp" android:textStyle="bold"></TextView>
			<ImageView android:layout_height="wrap_content" android:src="@drawable/topic_title_tailer" android:layout_width="fill_parent"></ImageView>
			<TextView android:text="TextView" android:id="@+id/topic_content"
				android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:textSize="18sp" android:paddingLeft="4dp" android:paddingRight="4dp" android:paddingTop="5dp"></TextView>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
